--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #b7dfff;
+    background-image:url('background.jpg');
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 0;
     padding-left: 5%;
