--- a/styles/style.css
+++ b/styles/style.css
@@ -65,3 +65,8 @@ body {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
 }
+
+footer {
+    text-align: center;
+    justify-content: center;
+}
