--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #b7dfff;
+    background-color: #e6e5f7;
     background-image:url('background.jpg');
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 0;
